--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Serkalem's page</title>
 </head>
 <body>
-    <img src="mee.jpg" alt="me"/>
+    <img src="myimage.jpg" alt="me"/>
         <p> SERKALEM HAILU
         </p>
         <Ul>
