--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         </p>
         <Ul>
             <li> lab1: This Homepage</li>
-            <li> lab2: About Me </li>
-            <li> lab3: </li>
-            <li> lab4:</li>
-            <li> lab5</li>
+            <li> lab2:<a>About Me </a> </li>
+            <li> lab3: <a>lab3</a></li>
+            <li> lab4:<a>lab4</a></li>
+            <li> lab5:,<a>lab5</a></li>
         </Ul>
         
         <footer>
