--- a/W1D2/aboutme.html
+++ b/W1D2/aboutme.html
@@ -20,9 +20,11 @@
         <li>CS590-Software Architecture</li>
     </ul>
     <h2> My Favorite Movies</h2>
-    <p> The movies are </p>
+    <p> To speak honestly i don't watch movies. </p>
     <ol>
-        <li></li>
+        <li>Movie 1</li>
+        <li>Movie 2</li>
+        <li>Movie 3</li>
     </ol>
     
 </body>
