--- a/W1D2/aboutme.html
+++ b/W1D2/aboutme.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <link rel="stylesheet" href="styleme.css">
 </head>
 <body>
     <h1>About Serkalem hailu</h1>
-    <p> My name is Serkalem, i am energiatic and friendly </p>
+    <p> My name is Serkalem, i am happy and <em>friendly </p>
     <h2> My Course in MIU</h2>
     <ul>
         <li>CS390- Fundamental Programming Practices</li>
@@ -22,10 +23,32 @@
     <h2> My Favorite Movies</h2>
     <p> To speak honestly i don't watch movies. </p>
     <ol>
-        <li>Movie 1</li>
-        <li>Movie 2</li>
-        <li>Movie 3</li>
+        <li> The last 30 minutes of Forrest Gump <a href ="">(IMDB)</a></li>
+        <li>Star Trek Episode V with Zazu<a href = "">(IMDB)</a></li>
+        <li>Fight Club <a href="">(IMDB) </a></li>
     </ol>
+    <h2> My Mood</h2>
+    <div> 
+        <div><img src="imageshappy.png"alt="HAPPY"> 
+            <p> Happy</p>
+        </div>
+        <div>
+            <img src="imagesSad.png" alt="SAD">
+            <p> Sad</p>
+        </div>
+    </div>
+    
+    <h2>Fun Fact About My Neighbors</h2>
+    <ul>
+        <li>Kakilat: Sociable</li>
+        <li>Soli: Lovely</li>
+    </ul>
+
+    <a href="https://validator.w3.org/nu/?doc=https://solia-dove.github.io/W1D2/aboutme.html">
+        <img src="https://manalabs.org/img/w3c-html.png" alt="html validator" /> </a>
+      <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://solia-dove.github.io/W1D2/style.css">
+        <img src="https://manalabs.org/img/w3c-css.png"  alt="css validator"/>
+      </a>
     
 </body>
 </html>
