--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serkalem's page</title>
+    <style>
+body{
+background-color:cadetblue;
+}
+
+    </style>
 </head>
 <body>
     <img src="mee.jpg" alt="me"/>
         <p> SERKALEM HAILU 
         </p>
         <Ul>
-            <li> lab1: This Homepage</li>
-            <li> lab2:<a href="">About Me </a> </li>
+            <li> lab1: <a href ="">This Homepage</a></li>
+            <li> lab2:<a href="W1D2/aboutme.html">About Me </a> </li>
             <li> lab3: <a href="">lab3</a></li>
             <li> lab4:<a href="">lab4</a></li>
             <li> lab5:<a href="">lab5</a></li>
