--- a/W1D2/aboutme.html
+++ b/W1D2/aboutme.html
@@ -44,9 +44,9 @@
         <li>Soli: Lovely</li>
     </ul>
 
-    <a href="https://validator.w3.org/nu/?doc=https://solia-dove.github.io/W1D2/aboutme.html">
+    <a href="https://validator.w3.org/nu/?doc=https://validator.w3.org/nu/?doc=https%3A%2F%2Fsehailu2021.github.io%2Fsehailu2021%2F">
         <img src="https://manalabs.org/img/w3c-html.png" alt="html validator" /> </a>
-      <a href="http://jigsaw.w3.org/css-validator/validator?uri=https://solia-dove.github.io/W1D2/style.css">
+      <a href=https://jigsaw.w3.org/css-validator/validator?uri=+https%3A%2F%2Fsehailu2021.github.io%2Fsehailu2021%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en>
         <img src="https://manalabs.org/img/w3c-css.png"  alt="css validator"/>
       </a>
     
