--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serkalem's page</title>
     <style>
-body{
-background-color:cadetblue;
-}
-
+        body{ background-color:cadetblue;}
     </style>
 </head>
 <body>
-    <img src="mee.jpg" alt="me"/>
+    <img src="myimage.jpg" alt="me" style="height: 300px; width: 300px;"/>
         <p> SERKALEM HAILU 
         </p>
         <Ul>
