--- a/W1D2/aboutme.html
+++ b/W1D2/aboutme.html
@@ -29,11 +29,11 @@
     </ol>
     <h2> My Mood</h2>
     <div> 
-        <div><img src="imageshappy.png"alt="HAPPY"> 
+        <div class = "mood"><img  src="imageshappy.png"alt="HAPPY"> 
             <p> Happy</p>
         </div>
-        <div>
-            <img src="imagesSad.png" alt="SAD">
+        <div class = "mood">
+            <img src="Sadimage.jpg" alt="SAD">
             <p> Sad</p>
         </div>
     </div>
