--- a/W1D2/aboutme.html
+++ b/W1D2/aboutme.html
@@ -32,7 +32,7 @@
         <div class = "mood"><img  src="imageshappy.png"alt="HAPPY"> 
             <p> Happy</p>
         </div>
-        <div class = "mood">
+        <div class = "mood sad">
             <img src="Sadimage.jpg" alt="SAD">
             <p> Sad</p>
         </div>
