--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <Ul>
             <li> lab1: <a href ="">This Homepage</a></li>
             <li> lab2:<a href="W1D2/aboutme.html">About Me </a> </li>
-            <li> lab3: <a href="">lab3</a></li>
+            <li> lab3: <a href="W1D3/shopping.html">Layout</a></li>
             <li> lab4:<a href="">lab4</a></li>
             <li> lab5:<a href="">lab5</a></li>
         </Ul>
