--- a/W1D5/form.html
+++ b/W1D5/form.html
@@ -64,7 +64,9 @@
                                 <span class ="details">Phone Number</span>
                                  <input type="text" required>
                    </div>
+                   <div class=side>
                    <div class = "input-box">
+                 
                      <p>Lunch</p>
                     <span class ="details">Meal Preference</span>
                                     
@@ -84,6 +86,7 @@
                        <input id ="demand" type="checkbox" required>
                        <label for="demand">Demand Draft</label>
                    </div>
+               </div>
                </div>
                 <div class= "button">
                      <input type="reset">
