--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li> lab2:<a href="W1D2/aboutme.html">About Me </a> </li>
             <li> lab3: <a href="W1D3/shopping.html">Layout</a></li>
             <li> lab4:<a href="W1D5/form.html">Forms</a></li>
-            <li> lab5:<a href="">lab5</a></li>
+            <li> lab5:<a href="W1D6/JavaScript.html">JSIntro</a></li>
         </Ul>
         
         <footer>
